2003-09-06  Jeff Freedman  <jeff@amy.nerble.net>

	* delobjs.cc: Adding a timestamp, so objects don't get deleted
	until they've been there a few minutes.

2003-09-01  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/animate.cc,gamemap.cc:  Check for 'sfx' objs. that aren't
	animated.  Black gate and vortex cube now have sound effects.

2003-08-31  Ryan Nunn  <colourles@users.sourceforge.net>
	* imagewin/scale.cc : Fixing 2xSaI (No mouse problems, should generally
	  look better)

2003-08-31  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* all: if we're GPL, don't refer to the LGPL for details.
	  (thanks to Colourless for spotting this one)

2003-08-30  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* intrinsics.cc: fix crash in get_npc_name
	* chunks.cc: don't delete non-temporary npc on cache_out

2003-08-27  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* gamemap.cc: enable WANT_MAP_CACHE_OUT permanently

2003-08-25  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* schedule.cc: don't create special potions in lab schedule

2003-08-23  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/ucsched.cc, usecode/ucscriptop.h, actors.cc:  Schedule
	'resurrection' instead of doing it immediately.

2003-08-16  Jeff Freedman  <jeff@amy.nerble.net>

	* shapes/shapeinf.cc: Kludge:  Don't use sfx 123 for weapons in
	SI; use 61 instead.

2003-08-15  Jeff Freedman  <jeff@amy.nerble.net>

	* mapedit/shapefile.cc (Image_file_info): Write out single-shape
	files correctly.
	* data/estudio/new:  Added (primitive) fonts.vga, pointers.shp.

2003-08-14  Ryan Nunn  <colourles@users.sourceforge.net>
	* usecode/intrinsics.cc, usecode/siintrinsics.h, usecode/ucinternal.h :
	  B5 Intrinsic in SI (modify_schedule)

2003-0813	Darke	<darkepaw@users.sf.net>
	* usecode/ucxt/head2data.cc: Updated to append function number
	  to the end of UNKNOWN functions.

2003-08-11  Ryan Nunn  <colourles@users.sourceforge.net>